<resources>
    <string name="app_name">Tronline</string>
    <string name="welcom_btn">Get Started</string>
    <string name="app_title">Nikola</string>
    <string name="login_email">Email Id</string>
    <string name="login_Password">Password</string>
    <string name="login_btn">Sign In</string>
    <string name="forgot_pass_btn">Forgot Password?</string>
    <string name="new_user_btn">New User?</string>
    <string name="req_pass_btn">Request Password</string>
    <string name="register_btn">Register</string>
    <string name="forgot_txt_note">Please Enter Email Id to Receive Password</string>
    <string name="first_name">First Name</string>
    <string name="last_Name">Last Name</string>
    <string name="your_password">Your Password</string>
    <string name="your_email">Your Email</string>
    <string name="phn_no">Phone Number</string>
    <string name="txt_select_country">Select Country</string>
    <string name="txt_select_currency">Select Currency</string>
    <string name="login_cancelled">login cancelled</string>
    <string name="login_failed">login failed</string>
    <string name="btn_edit">EDIT</string>
    <string name="btn_save">SAVE</string>
    <string name="dialog_exit_caps">EXIT</string>
    <string name="dialog_exit_text">Are you sure ?</string>
    <string name="txt_current_loc">Pickup location</string>
    <string name="txt_pickup_loc">Set Pickup location</string>
    <string name="txt_set_drop_loc">Set Drop location</string>
    <string name="txt_drop_loc">Drop Location</string>
    <string name="txt_types_title">Available Cars</string>
    <string name="txt_types_payment">Cash</string>
    <string name="txt_driver">Driver</string>
    <string name="total_fare">TOTAL FARE</string>
    <string name="trip_summary">TRIP SUMMARY</string>
    <string name="rate_ride">RATE YOUR RIDE</string>
    <string name="txt_male">male</string>
    <string name="txt_female">female</string>
    <string name="txt_select_time">Select Date and time</string>
    <string name="dialog_no_internet">No Internet</string>
    <string name="no_internet">Internet not available</string>
    <string name="dialog_no_inter_message">You have not active internet connection.</string>
    <string name="dialog_enable_3g">Enable 3G</string>
    <string name="dialog_enable_wifi">Enable WIFI</string>
    <string name="dialog_exit">Exit</string>
    <string name="txt_mobile_error">Please Enter Mobile number!</string>
    <string name="txt_fname_error">Please Enter First name!</string>
    <string name="txt_lname_error">Please Enter Last name!</string>
    <string name="txt_incorrect_error">Incorrect Email id!</string>
    <string name="txt_picture_error">Please choose profile picture!</string>
    <string name="txt_phone_error">Please Enter phone number!</string>
    <string name="txt_pass8_error">Password must be at least 8 character!</string>
    <string name="txt_email_error">Please Enter Email ID!</string>
    <string name="txt_pass_error">Please Enter Password!</string>
    <string name="txt_drivers_error">There are no drivers available in this service type!</string>
    <string name="txt_load">Loading...</string>
    <string name="txt_confirm">Confirming...</string>
    <string name="txt_signin">Signing in...</string>
    <string name="reg_load">Registering...</string>
    <string name="updating_pro_load">Updating profile...</string>
    <string name="req_pass_load">Requesting Password...</string>
    <string name="my_home">Home</string>
    <string name="my_payment">Add Payment Options</string>
    <string name="nikola_wallet">Tron Wallet</string>
    <string name="my_free_ride">Free Rides</string>
    <string name="ask_bot">Ask Bot</string>
    <string name="ride_history">Ride History</string>
    <string name="my_promo">Promos</string>
    <string name="later_rides">Your Scheduled Rides</string>
    <string name="my_help">Help</string>
    <string name="txt_logout">Logout</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="logout_text">Are you sure you want to Signout?</string>
    <string name="txt_gmail">Connecting Gmail!</string>
    <string name="update_success_text">Profile Updated Successfully</string>
    <string-array name="language">
        <item>Select Language</item>
        <item>English(en)</item>
        <item>French(fr)</item>
    </string-array>
    <string-array name="currency">
        <item>USD</item>
        <item>INR</item>
    </string-array>
    <string name="facebook_api_id">1282522678496595</string>
    <string name="sender_id">942850374226</string>
    <string name="google_app_id">942850374226</string>
    <string name="map_key">AIzaSyDoujGbr86VY2F6vhh-bzZjsebCFoRn0ik</string>
    <string name="txt_slct_option">Choose Picture</string>
    <string name="txt_gellery">Gallery</string>
    <string name="txt_cameray">Camera</string>
    <string name="txt_warning">( Disabled to avoid Vandalism of Demo )</string>
    <string name="txt_img_error">unable to select image!</string>
    <string name="txt_current_location">Set Pickup Location</string>
    <string name="txt_symbol_dot">\u25CF</string>
    <string name="txt_symbol_square">\u25A0</string>
    <string name="txt_dest_hint">Choose your destination</string>
    <string name="txt_req_cab">Request Taxi</string>
    <string name="txt_success_forgot_password">Password Sent successfully to Registered Mail Id! </string>
    <string name="txt_approx_fare">Approximate Fare</string>
    <string name="txt_cost_dis_fare">Cost / km </string>
    <string name="txt_tot_dis">Approximate dis.</string>
    <string name="txt_cost_min_fare">Cost / Min </string>
    <string name="txt_btn_done">Done</string>
    <string name="txt_fare_note">Long press on Car icon to get Approximate fare!</string>
    <string name="txt_pickup_address">Pickup Address</string>
    <string name="txt_drop_address">Drop Address</string>
    <string name="txt_sub_rating">Submit</string>
    <string name="txt_cancel">Cancel</string>
    <string name="et_promocode">Enter Promo Code</string>
    <string name="btn_apply_promo">Apply Promo</string>
    <string name="tv_promocode_note">If you have Promo code, enter it and save on your ride.</string>
    <string name="help_line">In Case of Emergency</string>
    <string name="txt_refferal_link">Share Your Referral Link</string>
    <string name="text_job_accepted">DRIVER ACCEPTED THE REQUEST</string>
    <string name="text_driver_started">DRIVER IS ON THE WAY</string>
    <string name="text_driver_arrvied">DRIVER HAS ARRIVED AT YOUR PLACE</string>
    <string name="text_trip_started"> YOUR TRIP HAS BEEN STARTED</string>
    <string name="text_trip_completed">YOUR TRIP IS COMPLETED</string>
    <string name="btn_later"><u>No,its for a later date</u></string>
    <string name="txt_gps_off">GPS is Off!</string>
    <string name="txt_gps_msg">Please Turn On GPS</string>
    <string name="txt_enable">Enable</string>
    <string name="txt_exit">Exit</string>
    <string name="history_title">Ride History</string>
    <string name="later_title">Your Scheduled Rides</string>
    <string name="select_payment_title">Select Payment</string>
    <string name="add_payment_title">Add Payment Options</string>
    <string name="txt_select_payment"><u>Tap to change Payment Option.</u></string>
    <string name="txt_note_choose">This feature is <b>Disabled</b> in <b>DEMO</b>, to avoid Vandalism of the Demo</string>
    <string name="not_available">-- Not Available --</string>
    <string name="car_type">car type</string>
    <string name="reciept">Receipt</string>
    <string name="your_ride_with">your ride with</string>
    <string name="sign_in">Sign In</string>
    <string name="select_language">Language</string>
    <string name="or_connect_using_a_social_account">Or connect using a social account.</string>
    <string name="base_fare">Base fare</string>
    <string name="min_fare">Min. fare</string>
    <string name="time_cost">Time cost</string>
    <string name="distance">Distance</string>
    <string name="booking_price">Booking price</string>
    <string name="service_tax">Service tax</string>
    <string name="total">Total</string>
    <string name="ride_details">Ride details</string>
    <string name="logout">Logout</string>
    <string name="contact">Contact</string>
    <string name="cancel_ride">Cancel ride</string>
    <string name="completed_ride">Your Ride is completed!</string>
    <string name="complete_ride">Your Ride is completed!</string>
    <string name="pay_now">Pay now</string>
    <string name="pay">You need to pay:</string>
    <string name="payment_note">Tap on the orange icon below \nto Add new Payment Options.</string>
    <string name="payment_note1">For Demo Purpose use the following card details</string>
    <string name="payment_note2">Card Number: 4242 4242 4242 4242\n Expiration: 12/20</string>
    <string name="no_history">--- No Ride History Available ---</string>
    <string name="no_places">--- No Saved Places ---</string>
    <string name="airport_title">Airport ride booking</string>
    <string name="airport_note">Use this screen to pre-book a ride to the Airport.</string>
    <string name="airport_note2">Going to the Airport -or- Coming out?</string>
    <string name="going_airport">Going to Airport</string>
    <string name="coming_airport">Coming out?</string>
    <string name="select_airport">Select the Airport</string>
    <string name="set_pickup">Set Pickup Location.</string>
    <string name="set_vehicle">Select Vehicle Type</string>
    <string name="fare_detials">Fare Details</string>
    <string name="price_package">Package price</string>
    <string name="txt_toll">Total Toll Gates in your route</string>
    <string name="btn_book">Book Now</string>
    <string name="title_bolt">Hello bot!</string>
    <string name="ent_msg">Enter Message</string>
    <string name="getting_location">Getting your location...</string>
    <string name="issue_title">Select An Issue</string>
    <string name="msgr">Messenger</string>
    <string name="typ_msg">Type your message</string>
    <string name="pic_worn">You can choose the picture from Gallery -or- Use Camera to create one.</string>
    <string name="txt_note">Note: </string>
    <string name="txt_ok">Ok</string>
    <string name="txt_enter_card">Please Enter Card Number</string>
    <string name="txt_error_month">Please Enter Expiry Month!</string>
    <string name="txt_error_year">Please Enter Expiry Year!</string>
    <string name="txt_error_ccv">Please Enter CCV Number!</string>
    <string name="mm">MM</string>
    <string name="yy">YYYY</string>
    <string name="cvv">CVV</string>
    <string name="enter_address">Enter Pickup Address</string>
    <string name="txt_fare_break">Fare Breakdown</string>
    <string name="txt_fare_break_note">Your fare will be the price presented before the trip or based on the rates below and other applicable surcharges and adjustments. </string>
    <string name="txt_base_price">Base Fare</string>
    <string name="txt_min_fare">Minimum Fare</string>
    <string name="txt_per_min">+ Per Minute</string>
    <string name="txt_per_km">+ Per km</string>
    <string name="txt_book_fee">Booking Fee</string>
    <string name="title_rentale">Rentals</string>
    <string name="txt_hourly_note">Use this screen to book rentals ie. Hour based packages</string>
    <string name="txt_enter_hur">Enter No. of hours</string>
    <string name="txt_sign_up">Sign Up</string>
    <string name="txt_otp_note">You will have your OTP sent to the following mobile number!</string>
    <string name="txt_otp_demo">For demo purpose we have pre-filled the Verification code,please click Proceed!</string>
    <string name="txt_ent_otp">Enter your Otp</string>
    <string name="txt_no_otp">Not received your Otp?</string>
    <string name="txt_resend">RESEND</string>
    <string name="txt_proceed">Proceed</string>
</resources>