<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@color/transparent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/background_with_shadow">


        <com.tronline.user.CustomText.CustomBoldRegularTextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/pic_worn"
            android:textColor="@color/deep_grey"
            android:textSize="17sp" />

        <LinearLayout
            android:id="@+id/tv_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_title"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">
           <com.tronline.user.CustomText.CustomBoldRegularTextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textColor="@color/red"
               android:textSize="15sp"
               android:text="@string/txt_note"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_note_choose"
                android:textColor="@color/black"
                android:layout_marginLeft="5dp"
                android:textSize="15sp" />
        </LinearLayout>

        <com.tronline.user.CustomText.CustomRegularTextView
            android:id="@+id/btn_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_msg"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.5"
            android:background="@drawable/rounded_button_welcome"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/txt_ok"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />


    </RelativeLayout>

</RelativeLayout>